AI: generate synonyms for words